# tenantfirstaid

./: .dockerignore  .env.example  .gitignore  Architecture.md  Deployment.md  README.md  docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
.claude/: CLAUDE.md  settings.json
.claude/skills/: analyze-experiment.md  backend.md  corpus-dataset.md  evaluation.md  pr.md  (+2 more)
.github/: pull_request_template.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  PERSISTENT_DATA_README.md  docker-compose.yml  pyproject.toml
backend/evaluate/: EVALUATION.md  dataset-tenant-legal-qa-examples.jsonl  eval_history.py  langsmith_dataset.py  measure_evaluator_variance.py  run_langsmith_evaluation.py
backend/scripts/: EVALUATION.md  README.md  __init__.py  convert_csv_to_jsonl.py  create_app_gcs.py  create_datastore_gcs.py  create_langsmith_dataset.py  create_vector_store.py  enforce_ascii.py  eval.csv  eval.py  eval_results.json  eval_results_o4-mini_high.json  extract_sections.py  generate_metadata_jsonl.py  generate_types.py  langsmith_evaluators.py  run_langsmith_evaluation.py  shared.py  simple_eval.py  tenant_tests.jsonl  upload_to_gcs.py
backend/scripts/documents/: ORS090.txt  ORS091.txt  ORS105.txt  PCC30.01.txt
backend/scripts/documents/or/: OAR54.txt  ORS090.txt  ORS090_annotated.txt  ORS090_annotations.txt  ORS091.txt  ORS105.txt  ORS109.txt  ORS659A.txt
backend/scripts/documents/or/2024/: OAR411-54.txt  ORS090_annotations.txt  ORS091_annotations.txt  ORS105_annotations.txt  ORS659A-421_annotations.txt
backend/scripts/documents/or/2025/: OAR411-54.txt  ORS090.txt  ORS091.txt  ORS105.txt  ORS109-697.txt  ORS659A-421.txt
backend/scripts/documents/or/eugene/: EHC8.425.txt
backend/scripts/documents/or/eugene/2025/: EHC8-425.txt
backend/scripts/documents/or/portland/: PCC30.01.txt
backend/scripts/documents/or/portland/2025/: PCC30-01.txt
backend/scripts/generate_conversation/: chat.py  tenant_questions_facts_full.csv  tenant_questions_facts_with_new_conversations.csv  tenant_questions_facts_with_new_conversations_openai.csv
backend/src/: app.py  get_feedback.py
backend/tenantfirstaid/: app.py  chat.py  citations.py  constants.py  feedback.py  get_feedback.py  langchain_chat_manager.py  langchain_tools.py  location.py  logger.py  prepare_training.py  prompt.py  schema.py  sections.json  session.py  shared.py  submit_feedback.py  system_prompt.md
backend/tests/: conftest.py  gcs_helpers.py  test_chat.py  test_citations.py  test_constants.py  test_create_app_gcs.py  test_create_datastore_gcs.py  test_enforce_ascii.py  test_eval_history.py  test_generate_metadata_jsonl.py  test_generate_types.py  test_import.py  test_langchain_chat_manager.py  test_langchain_tools.py  test_logger.py  test_measure_evaluator_variance.py  test_session.py  test_shared.py  test_upload_to_gcs.py
config/: README.md  tenantfirstaid-backend.service  tenantfirstaid.conf
frontend/: Dockerfile  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts  vitest.setup.ts
terraform/: main.tf  startup.sh
(+116 files in other folders)
