[project]
name = "tenant-first-aid"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "flask",
  "valkey",
  "gunicorn",
  "openai==1.89",
  "jsonlines",
  "simplejson",
  "python-dotenv",
  "pandas>=2.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.16.1",
    "pyrefly>=0.21.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
    "types-Flask>=1.1.6",
    "types-simplejson>=3.20.0.20250326",
]

gen_convo = [
      "pandas",
      "openai",
]

