[project]
name = "tenant-first-aid"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.1.1",
  "gunicorn>=23.0.0",
  "google-auth>=2.40.3",
  "google-genai>=1.28.0",
  "google-cloud-aiplatform>=1.106.0",
  "openai==1.89",
  "jsonlines",
  "simplejson",
  "python-dotenv",
  "pandas>=2.3.0",
  "vertexai>=1.43.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "pyrefly>=0.21.0",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.0",
    "ty>=0.0.1a11",
    "types-Flask>=1.1.6",
    "types-simplejson>=3.20.0.20250326",
]

gen_convo = [
      "pandas",
      "openai",
]
